fixed modPow function int overflow

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,11 +2,13 @@
     width: 20%;
 }
 
-#help-message{
+#home-link{
     font-size: large;
 }
 
 .show-message{
     color: rgb(153, 49, 1);
     font-size: xx-large;
+    font-weight: bold;
 }
+
